# Player_prepare

./: README.md
app/: build.gradle
app/src/androidTest/java/com/tianzhuan/xiaohuiplayer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.h  CMakeLists.txt  JavaCallHelper.cpp  JavaCallHelper.h  NEFFmpeg.cpp  NEFFmpeg.h  VideoChannel.cpp  VideoChannel.h  macro.h  native-lib.cpp  safe_queue.h
app/src/main/cpp/include/libavformat/: avformat.h  avio.h
app/src/main/java/com/tianzhuan/xiaohuiplayer/: MainActivity.java  NEPlayer.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/tianzhuan/xiaohuiplayer/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
